--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libopencm3"]
 	path = libopencm3
 	url = https://github.com/libopencm3/libopencm3
+[submodule "stm32loader"]
+	path = stm32loader
+	url = https://github.com/jsnyder/stm32loader.git
